--- a/ProjectEulerTests/ProjectEulerTests.csproj
+++ b/ProjectEulerTests/ProjectEulerTests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectEuler\Project Euler.csproj" />
+  </ItemGroup>
+
 </Project>
